--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,14 @@
   flex-direction: column;
   margin: 30px 0;
 }
+
+.question-section form {
+  display: flex;
+  flex-direction: column;
+}
+
+.question-section label {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
